fix: about us not visible issue

--- a/app/about-us/page.css
+++ b/app/about-us/page.css
@@ -1,6 +1,5 @@
 .overlay-image {
   border-radius: 8px 8px 80px 8px;
-  opacity: 0px;
 }
 
 .team-profile-image {
@@ -13,7 +12,6 @@
   width: 280px;
   height: 340px;
   border-radius: 6px 6px 6px 60px;
-  opacity: 0px;
   border: 10px solid #f2ede8;
 }
 
@@ -22,7 +20,6 @@
   height: 450px;
   border-radius: 6px 60px 6px 6px;
   border: 0.19px 0px 0px 0px;
-  opacity: 0px;
 }
 
 @media only screen and (max-width: 768px) {
